--- a/230213회원가입로그인/views/user/login.ejs
+++ b/230213회원가입로그인/views/user/login.ejs
@@ -4,16 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>회원 가입</title>
+    <title>로그인</title>
 </head>
 <body>
-    <h3>회원 가입</h3>
-    <form action="/user/sign_up" method="post">
+    <h3>로그인</h3>
+    <form action="/user/login" method="post">
         <table>
-            <tr>
-                <td>이름 : </td>
-                <td><input type="text" name="userName"></td>
-            </tr>
             <tr>
                 <td>이메일 : </td>
                 <td><input type="text" name="userEmail"></td>
@@ -23,7 +19,8 @@
                 <td><input type="password" name="password"></td>
             </tr>
             <tr>
-                <td><input type="submit" value="회원가입"></td>
+                <!-- value는 input에 보이게 되는 값. 이 경우 버튼이 로그인이라고 표시되어 보임. -->
+                <td><input type="submit" value="로그인"></td>
             </tr>
         </table>
     </form>
