multer 파일 전송되는 것 확인, render로 파일 보내주는 것까지만 해봄

--- a/230214multer/axios/views/ex32_login.ejs
+++ b/230214multer/axios/views/ex32_login.ejs
@@ -55,7 +55,7 @@
                     return a.data;
                 }).then((b) => {
                     var button = document.getElementById("button"); 
-                    if (button.hasChildNodes()) {
+                    if (button.hasChildNodes()) { // 
                         button.removeChild( button.childNodes[0]);
                     }
                     var h6 = document.createElement("h6"); 
